no content image and bottom spacing issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -7227,7 +7227,7 @@ body {
 }
 
 .verify-simulation-overlay {
-  padding-top: 105px;
+  padding-top: 50px;
 }
 
 .mb-width {
